[package]
name = "stylus-hello-world"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/OffchainLabs/stylus-hello-world"
repository = "https://github.com/OffchainLabs/stylus-hello-world"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus hello world example"

[dependencies]
alloy-primitives = "0.7.3"
alloy-sol-types = "0.7.3"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.1"
hex = { version = "0.4.3", default-features = false }
pairing =  { version = "0.23.0", default-features = false }
sha2 = { version = "0.9.1", default-features = false } # Must be compatible with bls12_381, see https://github.com/zkcrypto/bls12_381/issues/102

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[[bin]]
name = "stylus-hello-world"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
debug = false            # no debug data
rpath = false            # no run-time search path
debug-assertions = false # prune debug assertions
incremental = false      # no incremental builds

[dependencies.digest]
version = "0.9"

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.2.1"
default-features = false

[dependencies.zeroize]
version = "1.4"
default-features = false
