[package]
name = "stylus-drand-verify"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Drand verification implemented for Stylus"

[dependencies]
alloy-primitives = "0.7.3"
alloy-sol-types = "0.7.3"
mini-alloc = "0.4.2"
stylus-sdk = "0.5.2"
hex = { version = "0.4.3", default-features = false }
pairing =  { version = "0.23.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
alloc = []
bits = []
experimental = []
std = []
zeroize = []

[[bin]]
name = "stylus-drand-verify"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[dependencies.digest]
version = "0.9"

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.2.1"
default-features = false

[dependencies.zeroize]
version = "1.4"
default-features = false
